# launcher

./: .gitignore  .pnp.cjs  .prettierignore  AGENTS.md  Cargo.toml  README.md  README.zh.md  deny.toml  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  release-drafter.yml
.github/workflows/: audit.yml  build.yml  check-frontend.yml  check-rust.yml  deny.yml  lint-js.yml  lint-rust.yml  pr-labeler.yml  test-rust.yml
core/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
core/capabilities/: main.json
core/icons/: icon.icns
core/src/: account.rs  download.rs  folder.rs  main.rs  platform.rs  task.rs  version.rs
core/src/config/: download.rs  instance.rs  launch.rs  mod.rs
core/src/install/: mod.rs  quilt.rs
core/src/install/fabric/: install.rs  mod.rs
core/src/install/forge/: install.rs  mod.rs  version_list.rs
core/src/install/java/: mod.rs
core/src/install/neoforged/: mod.rs
core/src/install/vanilla/: mod.rs
core/src/instance/: mod.rs
core/src/launch/: arguments.rs  complete.rs  mod.rs  options.rs
crates/account/: Cargo.toml  index.ts
crates/account/src/: authlib_injector.rs  error.rs  lib.rs  microsoft.rs  offline.rs
crates/config/: Cargo.toml  build.rs  index.ts  package.json  rollup.config.js
crates/config/guest-js/: index.ts
crates/config/permissions/autogenerated/: reference.md
crates/config/permissions/autogenerated/commands/: load_config_file.toml
crates/config/permissions/schemas/: schema.json
crates/config/src/: download.rs  error.rs  instance.rs  launch.rs  lib.rs
crates/download/: Cargo.toml
crates/download/src/: error.rs  lib.rs  task.rs
crates/folder/: Cargo.toml  index.ts
crates/folder/src/: lib.rs
crates/game_data/: Cargo.toml
crates/game_data/src/: lib.rs  nbt.rs
crates/game_data/src/saves/: mod.rs
crates/install/: Cargo.toml  index.ts
crates/install/src/: authlib_injector.rs  error.rs  fabric.rs  forge.rs  java.rs  lib.rs  neoforged.rs  quilt.rs  vanilla.rs
crates/instance/: Cargo.toml  index.ts
crates/instance/src/: config.rs  error.rs  lib.rs
crates/launch/: Cargo.toml  index.ts
crates/launch/src/: arguments.rs  complete.rs  error.rs  lib.rs  options.rs
crates/modrinth/: Cargo.toml  index.ts
crates/modrinth/src/: error.rs  lib.rs
crates/platform/: Cargo.toml  index.ts
crates/platform/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/task/: Cargo.toml
crates/task/src/: lib.rs
crates/version/: Cargo.toml
crates/version/src/: argument.rs  checks.rs  error.rs  lib.rs  library.rs  model.rs
src/: App.vue  DialogRoot.vue  Main.vue  global.d.ts  log.ts  main.ts  theme.ts
src/assets/styles/: basic-theme.css  catppuccin-theme-hc.css  catppuccin-theme.css  icons.css  main.css  transitions.css
src/components/: AccountStatus.vue  AppIcon.vue  Card.vue  CardButton.vue  DialogButton.vue  Expander.vue  IconButton.vue  IconSelect.vue  InfoBox.vue  ListItem.vue  ProgressBar.vue  SearchBar.vue  Select.vue  SettingGroup.vue  SettingItem.vue  SidebarItem.vue  SliderBar.vue  Tabs.vue  TextInputBox.vue  WindowButton.vue
src/components/base/: BaseInput.vue  BaseSelect.vue  BaseSwitch.vue
src/dialogs/: AccountManager.vue  ConfirmDeleteInstance.vue  CreateInstance.vue  LogViewer.vue  UpdateReminder.vue
src/dialogs/account/: View.vue
src/dialogs/create/: FabricChoose.vue  ForgeChoose.vue  QuiltChoose.vue
src/i18n/: en_us.ts  zh_cn.ts
src/pages/: Game.vue  Settings.vue
src/pages/dialogs/: AccountManager.vue  CreateInstance.vue  LogViewer.vue
src/pages/dialogs/account/: Add.vue  View.vue
src/pages/dialogs/create/: MinecraftChoose.vue  NeoforgedChoose.vue  QuiltChoose.vue
src/pages/game/: InstallProgress.vue  InstanceCard.vue  InstanceDetails.vue  InstanceList.vue  Mods.vue  Packs.vue  Settings.vue  Worlds.vue
src/pages/settings/: About.vue  Accessibility.vue  Advance.vue  Appearance.vue  Download.vue  Game.vue  General.vue
src/store/: config.ts  dialog.ts  instance.ts
src/views/: HomeView.vue  SettingsView.vue
src/views/game/: InstanceDetails.vue  Mods.vue  Settings.vue
src/views/settings/: AboutSettings.vue  AccessibilitySettings.vue  AdvanceSettings.vue  AppearanceSettings.vue  DownloadSettings.vue  GameSettings.vue  GeneralSettings.vue
