[workspace]
members = [
    "core/",
    "crates/*"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/conic-apps/launcher"
rust-version = "1.88"

[workspace.dependencies]
# ----- local crates -----
shared = { path = "./crates/shared", version = "0.0.0"}
account = { path = "./crates/account", version = "0.0.0"}
config = { path = "./crates/config", version = "0.0.0"}
download = { path = "./crates/download", version = "0.0.0"}
folder = { path = "./crates/folder", version = "0.0.0"}
# game_data = { path = "./crates/game_data", version = "0.0.0"}
install = { path = "./crates/install", version = "0.0.0"}
instance = { path = "./crates/instance", version = "0.0.0"}
launch = { path = "./crates/launch", version = "0.0.0"}
platform = { path = "./crates/platform", version = "0.0.0"}
task = { path = "./crates/task", version = "0.0.0"}
version = { path = "./crates/version", version = "0.0.0"}

# NOTE: local crates that aren't published to crates.io. These should not have versions.

# ----- non-local crates -----
tauri = { version = "2", default-features = false, features = ["unstable", "wry", "x11", "dynamic-acl"] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = [
  "fs",
  "io-util",
] }
futures = "0.3.21"
anyhow = "1"
toml = "0.9"
once_cell = "1"
base64 = "0.22.1"
regex = { version = "1", default-features = false, features = ["std"] }
zip = "4"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
hematite-nbt = "0.5.2"
rayon = "1"
sha1_smol = "1"
log = "0.4.22"
env_logger = "0.11.5"
num_cpus = "1"
sys-locale = "0.3.2"
os_info = "3.12.0"
url = "2"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
