[workspace]
members = [
    "core/",
    "crates/*"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/conic-apps/launcher"
rust-version = "1.88"

[workspace.dependencies]
# ----- local crates -----
shared = { path = "./crates/shared", version = "0.0.0"}
account = { path = "./crates/account", version = "0.0.0"}
config = { path = "./crates/config", version = "0.0.0"}
download = { path = "./crates/download", version = "0.0.0"}
folder = { path = "./crates/folder", version = "0.0.0"}
# game_data = { path = "./crates/game_data", version = "0.0.0"}
install = { path = "./crates/install", version = "0.0.0"}
instance = { path = "./crates/instance", version = "0.0.0"}
launch = { path = "./crates/launch", version = "0.0.0"}
platform = { path = "./crates/platform", version = "0.0.0"}
version = { path = "./crates/version", version = "0.0.0"}

# NOTE: local crates that aren't published to crates.io. These should not have versions.

# ----- non-local crates -----
async-fs = "2"
async-io = "2"
base64 = "0.22"
env_logger = "0.11.5"
fastnbt = "2"
futures = "0.3"
log = "0.4"
num_cpus = "1"
once_cell = "1"
os_info = "3"
rayon = "1"
regex = { version = "1", default-features = false, features = ["std"] }
reqwest = {version = "0.12", default-features = false, features = ["rustls-tls"]} # NOTE: If it cannot parsr non-utf8 json, add charset feature
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
sha1_smol = "1"
sha2 = { version = "0.10", default-features = false }
sys-locale = "0.3"
tauri = { version = "2", default-features = false, features = ["wry", "x11", "compression"] }
thiserror = "2"
toml = "0.9"
url = "2"
uuid = "1"
zip = { version = "4", default-features = false, features = ["deflate"]}

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
