[package]
name = "download"
version = "0.0.0"
authors = ["Broken-Deer"]
description = "Download utils"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
config.workspace = true
shared.workspace = true
task.workspace = true

log.workspace = true
rayon.workspace = true
serde.workspace = true
serde_with.workspace = true
tauri.workspace = true
thiserror.workspace = true
sha1_smol.workspace = true
async-fs.workspace = true
async-io.workspace = true
futures.workspace = true
reqwest.workspace = true
url.workspace = true
