[package]
name = "folder"
version = "0.0.0"
authors = ["Broken-Deer"]

edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
platform.workspace = true

serde.workspace = true
tauri.workspace = true
uuid.workspace = true
once_cell.workspace = true
tokio.workspace = true
anyhow.workspace = true
