[package]
name = "install"
version = "0.0.0"
authors = ["Broken-Deer"]

edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
shared.workspace = true
folder.workspace = true
config.workspace = true
instance.workspace = true
task.workspace = true
download.workspace = true
platform.workspace = true
version.workspace = true

async-fs.workspace = true
log.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
url.workspace = true
futures.workspace = true
thiserror.workspace = true
serde_with.workspace = true
reqwest.workspace = true
