[package]
name = "instance"
version = "0.0.0"
authors = ["Broken-Deer"]

edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
shared.workspace = true
config.workspace = true
version.workspace = true
folder.workspace = true

log.workspace = true
serde.workspace = true
uuid.workspace = true
tauri.workspace = true
tokio.workspace = true
toml.workspace = true
anyhow.workspace = true
