[package]
name = "launch"
version = "0.0.0"
authors = ["Broken-Deer"]

edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
shared.workspace = true
config.workspace = true
account.workspace = true
folder.workspace = true
instance.workspace = true
install.workspace = true
platform.workspace = true
version.workspace = true
download.workspace = true

regex.workspace = true
zip.workspace = true
log.workspace = true
tauri.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
async-fs.workspace = true
num_cpus.workspace = true
rayon.workspace = true
sha1_smol.workspace = true
thiserror.workspace = true
serde_with.workspace = true
reqwest.workspace = true
