[package]
name = "version"
version = "0.0.0"
authors = ["Broken-Deer"]

edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
platform.workspace = true
folder.workspace = true

serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
regex.workspace = true
thiserror.workspace = true
serde_with.workspace = true
